[tool.poetry]
name = "gefyra-json"
version = "0.3.9"
description = ""
authors = ["Michael Schilonka <michael@blueshoe.io>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.2"
kubernetes = "^24.2.0"
gefyra = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
json = "main:main"
