[tool.poetry]
name = "gefyra-json"
version = "0.5.0"
description = ""
authors = ["Michael Schilonka <michael@blueshoe.io>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.2"
kubernetes = "^25.3.0"
gefyra = "^1.0.4"
sentry-sdk = "^1.16.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
json = "main:main"
