[tool.poetry]
name = "gefyra-json"
version = "0.7.18"
description = ""
authors = ["Michael Schilonka <michael@blueshoe.io>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.3"
kubernetes = "^25.3.0"
gefyra = "^1.1.1"
sentry-sdk = "^1.21.0"
urllib3 = "1.26.15"
requests = "2.28.2"
docker = "^6.1.2"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
json = "main:main"
